# serializer version: 1
# name: TestCommunityStandards.test_CodeOfConduct
  '''
  Processing 1 module...
    Processing 'CommunityStandards' (1 of 1)...
  
  
  
  
    DONE! ([32;1m0[0m, <scrubbed duration>)
  DONE! ([32;1m0[0m, <scrubbed duration>)
  
  
  ╭───────────────────────────────────────────────── CommunityStandards ─────────────────────────────────────────────────╮
  │                                                                                                                      │
  │ Validates existence of repository files for Community Standards.                                                     │
  │                                                                                                                      │
  │                                                                                                                      │
  │ [37mSuccessful:     1 (12.50%)[0m                                                                                           │
  │ [37mWarnings:       0 (0.00%)[0m                                                                                            │
  │ [37mErrors:         0 (0.00%)[0m                                                                                            │
  │ [37mSkipped:        7 (87.50%)[0m                                                                                           │
  │                                                                                                                      │
  │ [37m╭─[0m[37m Metrics [0m[37m───────────────────────────────────────────────────────────────────────────────────────────────────────[0m[37m─╮[0m │
  │ [37m│[0m                                                                                                                  [37m│[0m │
  │ [37m│[0m                                                                                                                  [37m│[0m │
  │ [37m│[0m [37mSuccessful:     1 (12.50%)[0m                                                                                       [37m│[0m │
  │ [37m│[0m [37mWarnings:       0 (0.00%)[0m                                                                                        [37m│[0m │
  │ [37m│[0m [37mErrors:         0 (0.00%)[0m                                                                                        [37m│[0m │
  │ [37m│[0m [37mSkipped:        7 (87.50%)[0m                                                                                       [37m│[0m │
  │ [37m│[0m                                                                                                                  [37m│[0m │
  │ [37m╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯[0m │
  │                                                                                                                      │
  ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
  
  Results: DONE! ([32;1m0[0m, <scrubbed duration>)
  
  
  '''
# ---
# name: TestCommunityStandards.test_CodeOwners
  '''
  Processing 1 module...
    Processing 'CommunityStandards' (1 of 1)...
  
  
  
  
    DONE! ([32;1m0[0m, <scrubbed duration>)
  DONE! ([32;1m0[0m, <scrubbed duration>)
  
  
  ╭───────────────────────────────────────────────── CommunityStandards ─────────────────────────────────────────────────╮
  │                                                                                                                      │
  │ Validates existence of repository files for Community Standards.                                                     │
  │                                                                                                                      │
  │                                                                                                                      │
  │ [37mSuccessful:     1 (12.50%)[0m                                                                                           │
  │ [37mWarnings:       0 (0.00%)[0m                                                                                            │
  │ [37mErrors:         0 (0.00%)[0m                                                                                            │
  │ [37mSkipped:        7 (87.50%)[0m                                                                                           │
  │                                                                                                                      │
  │ [37m╭─[0m[37m Metrics [0m[37m───────────────────────────────────────────────────────────────────────────────────────────────────────[0m[37m─╮[0m │
  │ [37m│[0m                                                                                                                  [37m│[0m │
  │ [37m│[0m                                                                                                                  [37m│[0m │
  │ [37m│[0m [37mSuccessful:     1 (12.50%)[0m                                                                                       [37m│[0m │
  │ [37m│[0m [37mWarnings:       0 (0.00%)[0m                                                                                        [37m│[0m │
  │ [37m│[0m [37mErrors:         0 (0.00%)[0m                                                                                        [37m│[0m │
  │ [37m│[0m [37mSkipped:        7 (87.50%)[0m                                                                                       [37m│[0m │
  │ [37m│[0m                                                                                                                  [37m│[0m │
  │ [37m╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯[0m │
  │                                                                                                                      │
  ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
  
  Results: DONE! ([32;1m0[0m, <scrubbed duration>)
  
  
  '''
# ---
# name: TestCommunityStandards.test_Contributing
  '''
  Processing 1 module...
    Processing 'CommunityStandards' (1 of 1)...
  
  
  
  
    DONE! ([32;1m0[0m, <scrubbed duration>)
  DONE! ([32;1m0[0m, <scrubbed duration>)
  
  
  ╭───────────────────────────────────────────────── CommunityStandards ─────────────────────────────────────────────────╮
  │                                                                                                                      │
  │ Validates existence of repository files for Community Standards.                                                     │
  │                                                                                                                      │
  │                                                                                                                      │
  │ [37mSuccessful:     1 (12.50%)[0m                                                                                           │
  │ [37mWarnings:       0 (0.00%)[0m                                                                                            │
  │ [37mErrors:         0 (0.00%)[0m                                                                                            │
  │ [37mSkipped:        7 (87.50%)[0m                                                                                           │
  │                                                                                                                      │
  │ [37m╭─[0m[37m Metrics [0m[37m───────────────────────────────────────────────────────────────────────────────────────────────────────[0m[37m─╮[0m │
  │ [37m│[0m                                                                                                                  [37m│[0m │
  │ [37m│[0m                                                                                                                  [37m│[0m │
  │ [37m│[0m [37mSuccessful:     1 (12.50%)[0m                                                                                       [37m│[0m │
  │ [37m│[0m [37mWarnings:       0 (0.00%)[0m                                                                                        [37m│[0m │
  │ [37m│[0m [37mErrors:         0 (0.00%)[0m                                                                                        [37m│[0m │
  │ [37m│[0m [37mSkipped:        7 (87.50%)[0m                                                                                       [37m│[0m │
  │ [37m│[0m                                                                                                                  [37m│[0m │
  │ [37m╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯[0m │
  │                                                                                                                      │
  ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
  
  Results: DONE! ([32;1m0[0m, <scrubbed duration>)
  
  
  '''
# ---
# name: TestCommunityStandards.test_IssueTemplate
  '''
  Processing 1 module...
    Processing 'CommunityStandards' (1 of 1)...
  
  
  
  
    DONE! ([32;1m0[0m, <scrubbed duration>)
  DONE! ([32;1m0[0m, <scrubbed duration>)
  
  
  ╭───────────────────────────────────────────────── CommunityStandards ─────────────────────────────────────────────────╮
  │                                                                                                                      │
  │ Validates existence of repository files for Community Standards.                                                     │
  │                                                                                                                      │
  │                                                                                                                      │
  │ [37mSuccessful:     1 (12.50%)[0m                                                                                           │
  │ [37mWarnings:       0 (0.00%)[0m                                                                                            │
  │ [37mErrors:         0 (0.00%)[0m                                                                                            │
  │ [37mSkipped:        7 (87.50%)[0m                                                                                           │
  │                                                                                                                      │
  │ [37m╭─[0m[37m Metrics [0m[37m───────────────────────────────────────────────────────────────────────────────────────────────────────[0m[37m─╮[0m │
  │ [37m│[0m                                                                                                                  [37m│[0m │
  │ [37m│[0m                                                                                                                  [37m│[0m │
  │ [37m│[0m [37mSuccessful:     1 (12.50%)[0m                                                                                       [37m│[0m │
  │ [37m│[0m [37mWarnings:       0 (0.00%)[0m                                                                                        [37m│[0m │
  │ [37m│[0m [37mErrors:         0 (0.00%)[0m                                                                                        [37m│[0m │
  │ [37m│[0m [37mSkipped:        7 (87.50%)[0m                                                                                       [37m│[0m │
  │ [37m│[0m                                                                                                                  [37m│[0m │
  │ [37m╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯[0m │
  │                                                                                                                      │
  ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
  
  Results: DONE! ([32;1m0[0m, <scrubbed duration>)
  
  
  '''
# ---
# name: TestCommunityStandards.test_NoCodeOfConduct
  '''
  Processing 1 module...
    Processing 'CommunityStandards' (1 of 1)...
  
  
  
  
    DONE! ([31;1m-1[0m, <scrubbed duration>)
  DONE! ([31;1m-1[0m, <scrubbed duration>)
  
  
  ╭───────────────────────────────────────────────── CommunityStandards ─────────────────────────────────────────────────╮
  │                                                                                                                      │
  │ Validates existence of repository files for Community Standards.                                                     │
  │                                                                                                                      │
  │                                                                                                                      │
  │ [37mSuccessful:     0 (0.00%)[0m                                                                                            │
  │ [37mWarnings:       0 (0.00%)[0m                                                                                            │
  │ [37mErrors:         1 (12.50%)[0m                                                                                           │
  │ [37mSkipped:        7 (87.50%)[0m                                                                                           │
  │                                                                                                                      │
  │ [31m╭─[0m[31m [Error] CodeOfConduct [0m[31m─────────────────────────────────────────────────────────────────────────────────────────[0m[31m─╮[0m │
  │ [31m│[0m                                                                                                                  [31m│[0m │
  │ [31m│[0m Validates that CODE_OF_CONDUCT file exists.                                                                      [31m│[0m │
  │ [31m│[0m                                                                                                                  [31m│[0m │
  │ [31m│[0m ERROR: No CODE_OF_CONDUCT file found.                                                                            [31m│[0m │
  │ [31m│[0m                                                                                                                  [31m│[0m │
  │ [31m│[0m Resolution                                                                                                       [31m│[0m │
  │ [31m│[0m ----------                                                                                                       [31m│[0m │
  │ [31m│[0m   1) Create a CODE_OF_CONDUCT file in one of these locations:                                                    [31m│[0m │
  │ [31m│[0m      - .github/CODE_OF_CONDUCT                                                                                   [31m│[0m │
  │ [31m│[0m      - docs/CODE_OF_CONDUCT                                                                                      [31m│[0m │
  │ [31m│[0m      - CODE_OF_CONDUCT                                                                                           [31m│[0m │
  │ [31m│[0m                                                                                                                  [31m│[0m │
  │ [31m│[0m   Example CODE_OF_CONDUCT file format:                                                                           [31m│[0m │
  │ [31m│[0m   ```                                                                                                            [31m│[0m │
  │ [31m│[0m   # Contributor Code of Conduct                                                                                  [31m│[0m │
  │ [31m│[0m   ## Principles                                                                                                  [31m│[0m │
  │ [31m│[0m   ## Community Guidelines                                                                                        [31m│[0m │
  │ [31m│[0m   ```                                                                                                            [31m│[0m │
  │ [31m│[0m                                                                                                                  [31m│[0m │
  │ [31m│[0m Rationale                                                                                                        [31m│[0m │
  │ [31m│[0m ---------                                                                                                        [31m│[0m │
  │ [31m│[0m   A CODE_OF_CONDUCT defines expectations for behavior for your                                                   [31m│[0m │
  │ [31m│[0m   project's participants.                                                                                        [31m│[0m │
  │ [31m│[0m                                                                                                                  [31m│[0m │
  │ [31m│[0m   Benefits:                                                                                                      [31m│[0m │
  │ [31m│[0m   - Define community standards                                                                                   [31m│[0m │
  │ [31m│[0m   - Signal a welcoming and inclusive project                                                                     [31m│[0m │
  │ [31m│[0m   - Outline procedures for handling abuse                                                                        [31m│[0m │
  │ [31m│[0m   - Help create a positive social atmosphere for your community                                                  [31m│[0m │
  │ [31m│[0m                                                                                                                  [31m│[0m │
  │ [31m╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯[0m │
  │ [37m╭─[0m[37m Metrics [0m[37m───────────────────────────────────────────────────────────────────────────────────────────────────────[0m[37m─╮[0m │
  │ [37m│[0m                                                                                                                  [37m│[0m │
  │ [37m│[0m                                                                                                                  [37m│[0m │
  │ [37m│[0m [37mSuccessful:     0 (0.00%)[0m                                                                                        [37m│[0m │
  │ [37m│[0m [37mWarnings:       0 (0.00%)[0m                                                                                        [37m│[0m │
  │ [37m│[0m [37mErrors:         1 (12.50%)[0m                                                                                       [37m│[0m │
  │ [37m│[0m [37mSkipped:        7 (87.50%)[0m                                                                                       [37m│[0m │
  │ [37m│[0m                                                                                                                  [37m│[0m │
  │ [37m╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯[0m │
  │                                                                                                                      │
  ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
  
  Results: DONE! ([31;1m-1[0m, <scrubbed duration>)
  
  
  '''
# ---
# name: TestCommunityStandards.test_NoCodeOwners
  '''
  Processing 1 module...
    Processing 'CommunityStandards' (1 of 1)...
  
  
  
  
    DONE! ([31;1m-1[0m, <scrubbed duration>)
  DONE! ([31;1m-1[0m, <scrubbed duration>)
  
  
  ╭───────────────────────────────────────────────── CommunityStandards ─────────────────────────────────────────────────╮
  │                                                                                                                      │
  │ Validates existence of repository files for Community Standards.                                                     │
  │                                                                                                                      │
  │                                                                                                                      │
  │ [37mSuccessful:     0 (0.00%)[0m                                                                                            │
  │ [37mWarnings:       0 (0.00%)[0m                                                                                            │
  │ [37mErrors:         1 (12.50%)[0m                                                                                           │
  │ [37mSkipped:        7 (87.50%)[0m                                                                                           │
  │                                                                                                                      │
  │ [31m╭─[0m[31m [Error] CodeOwners [0m[31m────────────────────────────────────────────────────────────────────────────────────────────[0m[31m─╮[0m │
  │ [31m│[0m                                                                                                                  [31m│[0m │
  │ [31m│[0m Validates that CODEOWNERS file exists.                                                                           [31m│[0m │
  │ [31m│[0m                                                                                                                  [31m│[0m │
  │ [31m│[0m ERROR: No CODEOWNERS file found.                                                                                 [31m│[0m │
  │ [31m│[0m                                                                                                                  [31m│[0m │
  │ [31m│[0m Resolution                                                                                                       [31m│[0m │
  │ [31m│[0m ----------                                                                                                       [31m│[0m │
  │ [31m│[0m   1) Create a CODEOWNERS file in one of these locations:                                                         [31m│[0m │
  │ [31m│[0m      - .github/CODEOWNERS                                                                                        [31m│[0m │
  │ [31m│[0m      - docs/CODEOWNERS                                                                                           [31m│[0m │
  │ [31m│[0m      - CODEOWNERS                                                                                                [31m│[0m │
  │ [31m│[0m                                                                                                                  [31m│[0m │
  │ [31m│[0m   Example CODEOWNERS file format:                                                                                [31m│[0m │
  │ [31m│[0m   # Syntax example:                                                                                              [31m│[0m │
  │ [31m│[0m   # directory/ @username                                                                                         [31m│[0m │
  │ [31m│[0m   # *.js @username                                                                                               [31m│[0m │
  │ [31m│[0m   # /docs/ @username @username2                                                                                  [31m│[0m │
  │ [31m│[0m                                                                                                                  [31m│[0m │
  │ [31m│[0m Rationale                                                                                                        [31m│[0m │
  │ [31m│[0m ---------                                                                                                        [31m│[0m │
  │ [31m│[0m   CODEOWNERS files define who is responsible for code review.                                                    [31m│[0m │
  │ [31m│[0m                                                                                                                  [31m│[0m │
  │ [31m│[0m   Benefits:                                                                                                      [31m│[0m │
  │ [31m│[0m   - Automatic reviewer assignment                                                                                [31m│[0m │
  │ [31m│[0m   - Clear code ownership                                                                                         [31m│[0m │
  │ [31m│[0m   - Streamlined review process                                                                                   [31m│[0m │
  │ [31m│[0m                                                                                                                  [31m│[0m │
  │ [31m╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯[0m │
  │ [37m╭─[0m[37m Metrics [0m[37m───────────────────────────────────────────────────────────────────────────────────────────────────────[0m[37m─╮[0m │
  │ [37m│[0m                                                                                                                  [37m│[0m │
  │ [37m│[0m                                                                                                                  [37m│[0m │
  │ [37m│[0m [37mSuccessful:     0 (0.00%)[0m                                                                                        [37m│[0m │
  │ [37m│[0m [37mWarnings:       0 (0.00%)[0m                                                                                        [37m│[0m │
  │ [37m│[0m [37mErrors:         1 (12.50%)[0m                                                                                       [37m│[0m │
  │ [37m│[0m [37mSkipped:        7 (87.50%)[0m                                                                                       [37m│[0m │
  │ [37m│[0m                                                                                                                  [37m│[0m │
  │ [37m╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯[0m │
  │                                                                                                                      │
  ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
  
  Results: DONE! ([31;1m-1[0m, <scrubbed duration>)
  
  
  '''
# ---
# name: TestCommunityStandards.test_NoContributing
  '''
  Processing 1 module...
    Processing 'CommunityStandards' (1 of 1)...
  
  
  
  
    DONE! ([31;1m-1[0m, <scrubbed duration>)
  DONE! ([31;1m-1[0m, <scrubbed duration>)
  
  
  ╭───────────────────────────────────────────────── CommunityStandards ─────────────────────────────────────────────────╮
  │                                                                                                                      │
  │ Validates existence of repository files for Community Standards.                                                     │
  │                                                                                                                      │
  │                                                                                                                      │
  │ [37mSuccessful:     0 (0.00%)[0m                                                                                            │
  │ [37mWarnings:       0 (0.00%)[0m                                                                                            │
  │ [37mErrors:         1 (12.50%)[0m                                                                                           │
  │ [37mSkipped:        7 (87.50%)[0m                                                                                           │
  │                                                                                                                      │
  │ [31m╭─[0m[31m [Error] Contributing [0m[31m──────────────────────────────────────────────────────────────────────────────────────────[0m[31m─╮[0m │
  │ [31m│[0m                                                                                                                  [31m│[0m │
  │ [31m│[0m Validates that CONTRIBUTING file exists.                                                                         [31m│[0m │
  │ [31m│[0m                                                                                                                  [31m│[0m │
  │ [31m│[0m ERROR: No CONTRIBUTING file found.                                                                               [31m│[0m │
  │ [31m│[0m                                                                                                                  [31m│[0m │
  │ [31m│[0m Resolution                                                                                                       [31m│[0m │
  │ [31m│[0m ----------                                                                                                       [31m│[0m │
  │ [31m│[0m   1) Create a contributing guide in one of these locations:                                                      [31m│[0m │
  │ [31m│[0m      - .github/CONTRIBUTING.md                                                                                   [31m│[0m │
  │ [31m│[0m      - docs/CONTRIBUTING.md                                                                                      [31m│[0m │
  │ [31m│[0m      - CONTRIBUTING.md                                                                                           [31m│[0m │
  │ [31m│[0m                                                                                                                  [31m│[0m │
  │ [31m│[0m   Example template can be found at:                                                                              [31m│[0m │
  │ [31m│[0m   https://github.com/nayafia/contributing-template/blob/master/CONTRIBUTING-template.md                          [31m│[0m │
  │ [31m│[0m                                                                                                                  [31m│[0m │
  │ [31m│[0m Rationale                                                                                                        [31m│[0m │
  │ [31m│[0m ---------                                                                                                        [31m│[0m │
  │ [31m│[0m   Contributing guides help new contributors understand how to participate.                                       [31m│[0m │
  │ [31m│[0m                                                                                                                  [31m│[0m │
  │ [31m│[0m   Benefits:                                                                                                      [31m│[0m │
  │ [31m│[0m   - Clear contribution process                                                                                   [31m│[0m │
  │ [31m│[0m   - Consistent code quality                                                                                      [31m│[0m │
  │ [31m│[0m   - Better community engagement                                                                                  [31m│[0m │
  │ [31m│[0m                                                                                                                  [31m│[0m │
  │ [31m╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯[0m │
  │ [37m╭─[0m[37m Metrics [0m[37m───────────────────────────────────────────────────────────────────────────────────────────────────────[0m[37m─╮[0m │
  │ [37m│[0m                                                                                                                  [37m│[0m │
  │ [37m│[0m                                                                                                                  [37m│[0m │
  │ [37m│[0m [37mSuccessful:     0 (0.00%)[0m                                                                                        [37m│[0m │
  │ [37m│[0m [37mWarnings:       0 (0.00%)[0m                                                                                        [37m│[0m │
  │ [37m│[0m [37mErrors:         1 (12.50%)[0m                                                                                       [37m│[0m │
  │ [37m│[0m [37mSkipped:        7 (87.50%)[0m                                                                                       [37m│[0m │
  │ [37m│[0m                                                                                                                  [37m│[0m │
  │ [37m╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯[0m │
  │                                                                                                                      │
  ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
  
  Results: DONE! ([31;1m-1[0m, <scrubbed duration>)
  
  
  '''
# ---
# name: TestCommunityStandards.test_NoIssueTemplate
  '''
  Processing 1 module...
    Processing 'CommunityStandards' (1 of 1)...
  
  
  
  
    DONE! ([31;1m-1[0m, <scrubbed duration>)
  DONE! ([31;1m-1[0m, <scrubbed duration>)
  
  
  ╭───────────────────────────────────────────────── CommunityStandards ─────────────────────────────────────────────────╮
  │                                                                                                                      │
  │ Validates existence of repository files for Community Standards.                                                     │
  │                                                                                                                      │
  │                                                                                                                      │
  │ [37mSuccessful:     0 (0.00%)[0m                                                                                            │
  │ [37mWarnings:       0 (0.00%)[0m                                                                                            │
  │ [37mErrors:         1 (12.50%)[0m                                                                                           │
  │ [37mSkipped:        7 (87.50%)[0m                                                                                           │
  │                                                                                                                      │
  │ [31m╭─[0m[31m [Error] IssueTemplates [0m[31m────────────────────────────────────────────────────────────────────────────────────────[0m[31m─╮[0m │
  │ [31m│[0m                                                                                                                  [31m│[0m │
  │ [31m│[0m Validates that ISSUE_TEMPLATES file exists.                                                                      [31m│[0m │
  │ [31m│[0m                                                                                                                  [31m│[0m │
  │ [31m│[0m ERROR: No ISSUE_TEMPLATES file found.                                                                            [31m│[0m │
  │ [31m│[0m                                                                                                                  [31m│[0m │
  │ [31m│[0m Resolution                                                                                                       [31m│[0m │
  │ [31m│[0m ----------                                                                                                       [31m│[0m │
  │ [31m│[0m   Add issue templates to your repository in the .github/ISSUE_TEMPLATE directory.                                [31m│[0m │
  │ [31m│[0m                                                                                                                  [31m│[0m │
  │ [31m│[0m Rationale                                                                                                        [31m│[0m │
  │ [31m│[0m ---------                                                                                                        [31m│[0m │
  │ [31m│[0m   Issue templates help contributors create high-quality issues by providing a structured format.                 [31m│[0m │
  │ [31m│[0m                                                                                                                  [31m│[0m │
  │ [31m╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯[0m │
  │ [37m╭─[0m[37m Metrics [0m[37m───────────────────────────────────────────────────────────────────────────────────────────────────────[0m[37m─╮[0m │
  │ [37m│[0m                                                                                                                  [37m│[0m │
  │ [37m│[0m                                                                                                                  [37m│[0m │
  │ [37m│[0m [37mSuccessful:     0 (0.00%)[0m                                                                                        [37m│[0m │
  │ [37m│[0m [37mWarnings:       0 (0.00%)[0m                                                                                        [37m│[0m │
  │ [37m│[0m [37mErrors:         1 (12.50%)[0m                                                                                       [37m│[0m │
  │ [37m│[0m [37mSkipped:        7 (87.50%)[0m                                                                                       [37m│[0m │
  │ [37m│[0m                                                                                                                  [37m│[0m │
  │ [37m╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯[0m │
  │                                                                                                                      │
  ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
  
  Results: DONE! ([31;1m-1[0m, <scrubbed duration>)
  
  
  '''
# ---
# name: TestCommunityStandards.test_NoPullRequestTemplate
  '''
  Processing 1 module...
    Processing 'CommunityStandards' (1 of 1)...
  
  
  
  
    DONE! ([31;1m-1[0m, <scrubbed duration>)
  DONE! ([31;1m-1[0m, <scrubbed duration>)
  
  
  ╭───────────────────────────────────────────────── CommunityStandards ─────────────────────────────────────────────────╮
  │                                                                                                                      │
  │ Validates existence of repository files for Community Standards.                                                     │
  │                                                                                                                      │
  │                                                                                                                      │
  │ [37mSuccessful:     0 (0.00%)[0m                                                                                            │
  │ [37mWarnings:       0 (0.00%)[0m                                                                                            │
  │ [37mErrors:         1 (12.50%)[0m                                                                                           │
  │ [37mSkipped:        7 (87.50%)[0m                                                                                           │
  │                                                                                                                      │
  │ [31m╭─[0m[31m [Error] PullRequestTemplate [0m[31m───────────────────────────────────────────────────────────────────────────────────[0m[31m─╮[0m │
  │ [31m│[0m                                                                                                                  [31m│[0m │
  │ [31m│[0m Validates that PULL_REQUESTS_TEMPLATE file exists.                                                               [31m│[0m │
  │ [31m│[0m                                                                                                                  [31m│[0m │
  │ [31m│[0m ERROR: No PULL_REQUESTS_TEMPLATE file found.                                                                     [31m│[0m │
  │ [31m│[0m                                                                                                                  [31m│[0m │
  │ [31m│[0m Resolution                                                                                                       [31m│[0m │
  │ [31m│[0m ----------                                                                                                       [31m│[0m │
  │ [31m│[0m   Create a pull request template file in one of these locations: .github/PULL_REQUEST_TEMPLATE.md,               [31m│[0m │
  │ [31m│[0m .github/pull_request_template.md, docs/PULL_REQUEST_TEMPLATE.md, or PULL_REQUEST_TEMPLATE.md                     [31m│[0m │
  │ [31m│[0m                                                                                                                  [31m│[0m │
  │ [31m│[0m Rationale                                                                                                        [31m│[0m │
  │ [31m│[0m ---------                                                                                                        [31m│[0m │
  │ [31m│[0m   Pull request templates help standardize code contributions and expedite the review process by ensuring         [31m│[0m │
  │ [31m│[0m consistent PR format.                                                                                            [31m│[0m │
  │ [31m│[0m                                                                                                                  [31m│[0m │
  │ [31m╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯[0m │
  │ [37m╭─[0m[37m Metrics [0m[37m───────────────────────────────────────────────────────────────────────────────────────────────────────[0m[37m─╮[0m │
  │ [37m│[0m                                                                                                                  [37m│[0m │
  │ [37m│[0m                                                                                                                  [37m│[0m │
  │ [37m│[0m [37mSuccessful:     0 (0.00%)[0m                                                                                        [37m│[0m │
  │ [37m│[0m [37mWarnings:       0 (0.00%)[0m                                                                                        [37m│[0m │
  │ [37m│[0m [37mErrors:         1 (12.50%)[0m                                                                                       [37m│[0m │
  │ [37m│[0m [37mSkipped:        7 (87.50%)[0m                                                                                       [37m│[0m │
  │ [37m│[0m                                                                                                                  [37m│[0m │
  │ [37m╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯[0m │
  │                                                                                                                      │
  ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
  
  Results: DONE! ([31;1m-1[0m, <scrubbed duration>)
  
  
  '''
# ---
# name: TestCommunityStandards.test_NoSecurityPolicy
  '''
  Processing 1 module...
    Processing 'CommunityStandards' (1 of 1)...
  
  
  
  
    DONE! ([31;1m-1[0m, <scrubbed duration>)
  DONE! ([31;1m-1[0m, <scrubbed duration>)
  
  
  ╭───────────────────────────────────────────────── CommunityStandards ─────────────────────────────────────────────────╮
  │                                                                                                                      │
  │ Validates existence of repository files for Community Standards.                                                     │
  │                                                                                                                      │
  │                                                                                                                      │
  │ [37mSuccessful:     0 (0.00%)[0m                                                                                            │
  │ [37mWarnings:       0 (0.00%)[0m                                                                                            │
  │ [37mErrors:         1 (12.50%)[0m                                                                                           │
  │ [37mSkipped:        7 (87.50%)[0m                                                                                           │
  │                                                                                                                      │
  │ [31m╭─[0m[31m [Error] SecurityPolicy [0m[31m────────────────────────────────────────────────────────────────────────────────────────[0m[31m─╮[0m │
  │ [31m│[0m                                                                                                                  [31m│[0m │
  │ [31m│[0m Validates that SECURITY file exists.                                                                             [31m│[0m │
  │ [31m│[0m                                                                                                                  [31m│[0m │
  │ [31m│[0m ERROR: No SECURITY file found.                                                                                   [31m│[0m │
  │ [31m│[0m                                                                                                                  [31m│[0m │
  │ [31m│[0m Resolution                                                                                                       [31m│[0m │
  │ [31m│[0m ----------                                                                                                       [31m│[0m │
  │ [31m│[0m   1) Create a security policy file in one of these locations:                                                    [31m│[0m │
  │ [31m│[0m      - .github/SECURITY.md                                                                                       [31m│[0m │
  │ [31m│[0m      - docs/SECURITY.md                                                                                          [31m│[0m │
  │ [31m│[0m      - SECURITY.md                                                                                               [31m│[0m │
  │ [31m│[0m                                                                                                                  [31m│[0m │
  │ [31m│[0m   Example policy can be found at:                                                                                [31m│[0m │
  │ [31m│[0m   https://github.com/gt-csse/RepoAuditor/blob/main/SECURITY.md                                             [31m│[0m │
  │ [31m│[0m                                                                                                                  [31m│[0m │
  │ [31m│[0m Rationale                                                                                                        [31m│[0m │
  │ [31m│[0m ---------                                                                                                        [31m│[0m │
  │ [31m│[0m   Security policies help users report vulnerabilities responsibly.                                               [31m│[0m │
  │ [31m│[0m                                                                                                                  [31m│[0m │
  │ [31m│[0m   Benefits:                                                                                                      [31m│[0m │
  │ [31m│[0m   - Clear security reporting process                                                                             [31m│[0m │
  │ [31m│[0m   - Responsible disclosure guidelines                                                                            [31m│[0m │
  │ [31m│[0m   - Better security management                                                                                   [31m│[0m │
  │ [31m│[0m                                                                                                                  [31m│[0m │
  │ [31m╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯[0m │
  │ [37m╭─[0m[37m Metrics [0m[37m───────────────────────────────────────────────────────────────────────────────────────────────────────[0m[37m─╮[0m │
  │ [37m│[0m                                                                                                                  [37m│[0m │
  │ [37m│[0m                                                                                                                  [37m│[0m │
  │ [37m│[0m [37mSuccessful:     0 (0.00%)[0m                                                                                        [37m│[0m │
  │ [37m│[0m [37mWarnings:       0 (0.00%)[0m                                                                                        [37m│[0m │
  │ [37m│[0m [37mErrors:         1 (12.50%)[0m                                                                                       [37m│[0m │
  │ [37m│[0m [37mSkipped:        7 (87.50%)[0m                                                                                       [37m│[0m │
  │ [37m│[0m                                                                                                                  [37m│[0m │
  │ [37m╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯[0m │
  │                                                                                                                      │
  ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
  
  Results: DONE! ([31;1m-1[0m, <scrubbed duration>)
  
  
  '''
# ---
# name: TestCommunityStandards.test_PullRequestTemplate
  '''
  Processing 1 module...
    Processing 'CommunityStandards' (1 of 1)...
  
  
  
  
    DONE! ([32;1m0[0m, <scrubbed duration>)
  DONE! ([32;1m0[0m, <scrubbed duration>)
  
  
  ╭───────────────────────────────────────────────── CommunityStandards ─────────────────────────────────────────────────╮
  │                                                                                                                      │
  │ Validates existence of repository files for Community Standards.                                                     │
  │                                                                                                                      │
  │                                                                                                                      │
  │ [37mSuccessful:     1 (12.50%)[0m                                                                                           │
  │ [37mWarnings:       0 (0.00%)[0m                                                                                            │
  │ [37mErrors:         0 (0.00%)[0m                                                                                            │
  │ [37mSkipped:        7 (87.50%)[0m                                                                                           │
  │                                                                                                                      │
  │ [37m╭─[0m[37m Metrics [0m[37m───────────────────────────────────────────────────────────────────────────────────────────────────────[0m[37m─╮[0m │
  │ [37m│[0m                                                                                                                  [37m│[0m │
  │ [37m│[0m                                                                                                                  [37m│[0m │
  │ [37m│[0m [37mSuccessful:     1 (12.50%)[0m                                                                                       [37m│[0m │
  │ [37m│[0m [37mWarnings:       0 (0.00%)[0m                                                                                        [37m│[0m │
  │ [37m│[0m [37mErrors:         0 (0.00%)[0m                                                                                        [37m│[0m │
  │ [37m│[0m [37mSkipped:        7 (87.50%)[0m                                                                                       [37m│[0m │
  │ [37m│[0m                                                                                                                  [37m│[0m │
  │ [37m╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯[0m │
  │                                                                                                                      │
  ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
  
  Results: DONE! ([32;1m0[0m, <scrubbed duration>)
  
  
  '''
# ---
# name: TestCommunityStandards.test_SecurityPolicy
  '''
  Processing 1 module...
    Processing 'CommunityStandards' (1 of 1)...
  
  
  
  
    DONE! ([32;1m0[0m, <scrubbed duration>)
  DONE! ([32;1m0[0m, <scrubbed duration>)
  
  
  ╭───────────────────────────────────────────────── CommunityStandards ─────────────────────────────────────────────────╮
  │                                                                                                                      │
  │ Validates existence of repository files for Community Standards.                                                     │
  │                                                                                                                      │
  │                                                                                                                      │
  │ [37mSuccessful:     1 (12.50%)[0m                                                                                           │
  │ [37mWarnings:       0 (0.00%)[0m                                                                                            │
  │ [37mErrors:         0 (0.00%)[0m                                                                                            │
  │ [37mSkipped:        7 (87.50%)[0m                                                                                           │
  │                                                                                                                      │
  │ [37m╭─[0m[37m Metrics [0m[37m───────────────────────────────────────────────────────────────────────────────────────────────────────[0m[37m─╮[0m │
  │ [37m│[0m                                                                                                                  [37m│[0m │
  │ [37m│[0m                                                                                                                  [37m│[0m │
  │ [37m│[0m [37mSuccessful:     1 (12.50%)[0m                                                                                       [37m│[0m │
  │ [37m│[0m [37mWarnings:       0 (0.00%)[0m                                                                                        [37m│[0m │
  │ [37m│[0m [37mErrors:         0 (0.00%)[0m                                                                                        [37m│[0m │
  │ [37m│[0m [37mSkipped:        7 (87.50%)[0m                                                                                       [37m│[0m │
  │ [37m│[0m                                                                                                                  [37m│[0m │
  │ [37m╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯[0m │
  │                                                                                                                      │
  ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
  
  Results: DONE! ([32;1m0[0m, <scrubbed duration>)
  
  
  '''
# ---
